--- a/wheel.html
+++ b/wheel.html
@@ -194,7 +194,7 @@
                         </svg>
                     </span>
                 </button>
-                <h1 class="text-3xl md:text-4xl text-gray-800">Family Wheel</h1>
+                <h1 class="text-3xl md:text-4xl text-gray-800">Family Day Wheel</h1>
             </div>
 
             <div class="flex gap-2">
@@ -658,3 +658,4 @@
     </script>
 </body>
 </html>
+
